<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>DataRecordUI</class>
 <widget class="QWidget" name="DataRecordUI">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1233</width>
    <height>783</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <property name="windowOpacity">
   <double>0.800000000000000</double>
  </property>
  <property name="styleSheet">
   <string notr="true">QWidget{
background:#DCDCDC;
border-right:1px solid black;
border-left:1px solid black;
border-top:1px solid black;
border-bottom:1px solid black;
border-top-left-radius:10px;
border-bottom-left-radius:10px;
border-top-right-radius:10px;
border-bottom-right-radius:10px;
}
QPushButton{
    border:none;
    border-bottom:1px solid black;
    font-size:18px;
    font-weight:700;
 }
QPushButton:hover{border-left:4px solid grey;font-weight:700;}
QCheckBox{
border:none}
</string>
  </property>
  <widget class="QGroupBox" name="DataRecordGroup">
   <property name="geometry">
    <rect>
     <x>920</x>
     <y>80</y>
     <width>281</width>
     <height>681</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <family>华文琥珀</family>
     <pointsize>13</pointsize>
    </font>
   </property>
   <property name="title">
    <string>数据录入</string>
   </property>
   <property name="alignment">
    <set>Qt::AlignCenter</set>
   </property>
   <widget class="QGroupBox" name="dbGroup">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>30</y>
      <width>261</width>
      <height>191</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>华文琥珀</family>
      <pointsize>11</pointsize>
     </font>
    </property>
    <property name="styleSheet">
     <string notr="true">QGroupBox{border:none}</string>
    </property>
    <property name="title">
     <string>数据库状态</string>
    </property>
    <widget class="QPushButton" name="initdb">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>30</y>
       <width>241</width>
       <height>41</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>华文中宋</family>
       <pointsize>-1</pointsize>
       <weight>87</weight>
       <bold>true</bold>
      </font>
     </property>
     <property name="text">
      <string>数据库初始化</string>
     </property>
    </widget>
    <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>80</y>
       <width>241</width>
       <height>101</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="UserNumberverticalLayout">
      <item>
       <widget class="QLabel" name="UserNumberLabel">
        <property name="font">
         <font>
          <family>华文中宋</family>
          <pointsize>10</pointsize>
         </font>
        </property>
        <property name="text">
         <string>已存人脸样本数：</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLCDNumber" name="UserlcdNumber"/>
      </item>
     </layout>
    </widget>
   </widget>
   <widget class="QGroupBox" name="useinfoGroup">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>230</y>
      <width>261</width>
      <height>421</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>华文琥珀</family>
      <pointsize>11</pointsize>
     </font>
    </property>
    <property name="styleSheet">
     <string notr="true">QGroupBox{border:none}</string>
    </property>
    <property name="title">
     <string>基本信息</string>
    </property>
    <widget class="QPushButton" name="addUserButton">
     <property name="enabled">
      <bool>false</bool>
     </property>
     <property name="geometry">
      <rect>
       <x>30</x>
       <y>20</y>
       <width>201</width>
       <height>41</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>华文中宋</family>
       <pointsize>-1</pointsize>
       <weight>87</weight>
       <bold>true</bold>
      </font>
     </property>
     <property name="text">
      <string>增加用户信息</string>
     </property>
    </widget>
    <widget class="QGroupBox" name="ConfirmGroup">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>70</y>
       <width>241</width>
       <height>351</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>华文琥珀</family>
       <pointsize>10</pointsize>
      </font>
     </property>
     <property name="styleSheet">
      <string notr="true">QLabel{border:none}</string>
     </property>
     <property name="title">
      <string>确认信息</string>
     </property>
     <widget class="QWidget" name="verticalLayoutWidget_2">
      <property name="geometry">
       <rect>
        <x>0</x>
        <y>29</y>
        <width>241</width>
        <height>261</height>
       </rect>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
        <widget class="QLabel" name="usernumberLabel">
         <property name="font">
          <font>
           <family>华文中宋</family>
           <pointsize>10</pointsize>
          </font>
         </property>
         <property name="text">
          <string>学号</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QLineEdit" name="UsernumlineEdit"/>
       </item>
       <item>
        <widget class="QLabel" name="usernameLabel">
         <property name="font">
          <font>
           <family>华文中宋</family>
           <pointsize>10</pointsize>
          </font>
         </property>
         <property name="text">
          <string>姓名</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QLineEdit" name="UsernamelineEdit"/>
       </item>
       <item>
        <widget class="QLabel" name="EnglishLabel">
         <property name="font">
          <font>
           <family>华文中宋</family>
           <pointsize>10</pointsize>
          </font>
         </property>
         <property name="text">
          <string>英文名</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QLineEdit" name="EnglishnamelineEdit"/>
       </item>
      </layout>
     </widget>
     <widget class="QPushButton" name="migrationButton">
      <property name="enabled">
       <bool>false</bool>
      </property>
      <property name="geometry">
       <rect>
        <x>30</x>
        <y>320</y>
        <width>181</width>
        <height>41</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>华文中宋</family>
        <pointsize>-1</pointsize>
        <weight>87</weight>
        <bold>true</bold>
       </font>
      </property>
      <property name="text">
       <string>同步到数据库</string>
      </property>
     </widget>
    </widget>
   </widget>
  </widget>
  <widget class="QLabel" name="Capturelabel">
   <property name="geometry">
    <rect>
     <x>240</x>
     <y>80</y>
     <width>640</width>
     <height>480</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <family>华文中宋</family>
     <pointsize>13</pointsize>
    </font>
   </property>
   <property name="frameShape">
    <enum>QFrame::Box</enum>
   </property>
   <property name="text">
    <string>摄像头未开启</string>
   </property>
   <property name="alignment">
    <set>Qt::AlignCenter</set>
   </property>
  </widget>
  <widget class="QGroupBox" name="faceDetectGroup">
   <property name="geometry">
    <rect>
     <x>20</x>
     <y>80</y>
     <width>191</width>
     <height>681</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <family>华文琥珀</family>
     <pointsize>13</pointsize>
    </font>
   </property>
   <property name="title">
    <string>人脸采集</string>
   </property>
   <property name="alignment">
    <set>Qt::AlignCenter</set>
   </property>
   <widget class="QWidget" name="verticalLayoutWidget_4">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>290</y>
      <width>171</width>
      <height>80</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_2">
     <item>
      <widget class="QLabel" name="facerecordcountlabel">
       <property name="font">
        <font>
         <family>华文中宋</family>
        </font>
       </property>
       <property name="text">
        <string>系统已采集帧数</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QLCDNumber" name="facerecordlcdNumber"/>
     </item>
    </layout>
   </widget>
   <widget class="QPushButton" name="OpenVideoButton">
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>40</y>
      <width>151</width>
      <height>41</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>华文中宋</family>
      <pointsize>-1</pointsize>
      <weight>87</weight>
      <bold>true</bold>
     </font>
    </property>
    <property name="text">
     <string>打开摄像头</string>
    </property>
   </widget>
   <widget class="QPushButton" name="faceDetectButton">
    <property name="enabled">
     <bool>false</bool>
    </property>
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>170</y>
      <width>151</width>
      <height>41</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>华文中宋</family>
      <pointsize>-1</pointsize>
      <weight>87</weight>
      <bold>true</bold>
     </font>
    </property>
    <property name="text">
     <string>开启人脸检测</string>
    </property>
   </widget>
   <widget class="QPushButton" name="StarrecordButton">
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>470</y>
      <width>161</width>
      <height>41</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>华文中宋</family>
      <pointsize>-1</pointsize>
      <weight>87</weight>
      <bold>true</bold>
     </font>
    </property>
    <property name="text">
     <string>开始采集人脸数据</string>
    </property>
   </widget>
   <widget class="QPushButton" name="enablerecordButton">
    <property name="enabled">
     <bool>false</bool>
    </property>
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>600</y>
      <width>171</width>
      <height>41</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>华文中宋</family>
      <pointsize>-1</pointsize>
      <weight>87</weight>
      <bold>true</bold>
     </font>
    </property>
    <property name="text">
     <string>采集当前捕获帧</string>
    </property>
   </widget>
  </widget>
  <widget class="QGroupBox" name="logGroup">
   <property name="geometry">
    <rect>
     <x>240</x>
     <y>580</y>
     <width>641</width>
     <height>181</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <family>华文琥珀</family>
     <pointsize>12</pointsize>
    </font>
   </property>
   <property name="title">
    <string>系统日志</string>
   </property>
   <widget class="QTextEdit" name="logtextEdit">
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>30</y>
      <width>601</width>
      <height>141</height>
     </rect>
    </property>
   </widget>
  </widget>
  <widget class="QPushButton" name="left_close">
   <property name="geometry">
    <rect>
     <x>1080</x>
     <y>20</y>
     <width>31</width>
     <height>28</height>
    </rect>
   </property>
   <property name="text">
    <string/>
   </property>
  </widget>
  <widget class="QPushButton" name="left_visit">
   <property name="geometry">
    <rect>
     <x>1120</x>
     <y>20</y>
     <width>31</width>
     <height>28</height>
    </rect>
   </property>
   <property name="text">
    <string/>
   </property>
  </widget>
  <widget class="QPushButton" name="left_mini">
   <property name="geometry">
    <rect>
     <x>1160</x>
     <y>20</y>
     <width>31</width>
     <height>28</height>
    </rect>
   </property>
   <property name="text">
    <string/>
   </property>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
